removed deprecated resume button. Fixed bug for overflow on full window size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,43 +136,6 @@ html, body{
   to {opacity: 1;}
 }
 
-/* -- Button -- */
-.resume-button {
-  /* button formatting */
-  padding: 1.5vmax 3vmax;
-  pointer-events: all;
-  background-color: #2276ed;
-  border-radius: .25vmax;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  cursor: pointer;
-  margin-bottom: .75vmax;
-
-  /* text formatting */
-  text-decoration: none;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: white;
-
-  /* arrow insert */
-  display: flex;
-}
-
-.resume-button:hover {
-  /* button hover formatting */
-  background-color: #27C9F9 ;
-}
-
-.resume-button::after {
-  /* button hover formatting */
-
-  display: block;
-  width: 24px;
-  overflow: scroll;
-  background-image: url("assets/icons/arrow-right-solid.svg");
-  margin-left: 8px;
-}
-
 #animationBox {
   display: flex;
   flex-direction: row;
@@ -180,8 +143,13 @@ html, body{
   align-items: center;
   justify-content: center; 
   width: 80%; 
-  flex-wrap: wrap; 
   top: 2px;
+}
+
+@media (max-width: 700px) {
+  #animationBox {
+    flex-wrap: wrap; 
+  }
 }
 
 .animationValue {
